attempt to fix cart on mobile

--- a/client/src/components/Cart-Items/checkout-styles.css
+++ b/client/src/components/Cart-Items/checkout-styles.css
@@ -58,7 +58,7 @@
   margin-left: auto;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 600px) {
   .checkoutItemContainer {
     /* previous styles */
     display: block;
